Use run.sh script to start application with java module system as optional